--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#4f46e5" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
- 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.webmanifest" crossorigin="use-credentials" />
-    
-    <title>Music Sync</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#4f46e5" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.webmanifest" crossorigin="use-credentials" />
+
+  <title>Music Sync</title>
+  <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/icons/app/icon57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/icons/app/icon60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/icons/app/icon72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/icons/app/icon114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/icons/app/icon120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/icons/app/icon144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/icons/app/icon152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/icons/app/icon180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/icons/app/icon192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/icons/app/icon32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/icons/app/icon96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/icons/app/icon16.png">
+  <meta name="msapplication-TileColor" content="#4f46e5">
+  <meta name="msapplication-TileImage" content="%PUBLIC_URL%/icons/app/icon144.png">
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
